--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-saver": "^2.0.2",
     "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-device-detect": "^1.9.10",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
     "react-redux": "^7.1.0",
